--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 09:05:31 2018</p>
+         Last Run: Mon Jul 16 10:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -31,25 +31,25 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>30</td>
-                        <td>30</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
-                        <td>21</td>
+                        <td>22</td>
                         <td>2</td>
-                        <td>13</td>
-                        <td>SE</td>
+                        <td>14</td>
+                        <td>ESE</td>
                         <td>0</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
-                        <td>24</td>
+                        <td>25</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -58,10 +58,10 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>SE</td>
+                        <td>13</td>
+                        <td>ESE</td>
                         <td>0</td>
                      </tr>
                   </tbody>
@@ -106,8 +106,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "30",
                  "29",
+                 "28",
                  "27"
                ]
              },
@@ -117,8 +117,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "30",
                  "29",
+                 "28",
                  "27"
                ]
              }
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "21",
-                 "24",
-                 "29"
+                 "22",
+                 "25",
+                 "30"
                ]
              },
              {
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 09:05:31 2018</p>
+         Last Run: Mon Jul 16 10:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -243,8 +243,8 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
                         <td>35</td>
                         <td>0</td>
@@ -260,7 +260,7 @@
                         <td>0</td>
                         <td>41</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>E</td>
                         <td>58</td>
                      </tr>
@@ -307,7 +307,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "28",
-                 "28",
+                 "27",
                  "26"
                ]
              },
@@ -318,7 +318,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "28",
-                 "28",
+                 "27",
                  "26"
                ]
              }
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 09:05:31 2018</p>
+         Last Run: Mon Jul 16 10:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -433,19 +433,19 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>9</td>
-                        <td>51</td>
+                        <td>7</td>
+                        <td>52</td>
                         <td>3</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>55</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>7</td>
+                        <td>3</td>
                         <td>52</td>
                         <td>2</td>
                         <td>10</td>
@@ -457,8 +457,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>46</td>
-                        <td>53</td>
+                        <td>47</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -469,7 +469,7 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>36</td>
+                        <td>41</td>
                         <td>57</td>
                         <td>0</td>
                         <td>13</td>
@@ -586,10 +586,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
                  "7",
-                 "46",
-                 "36"
+                 "3",
+                 "47",
+                 "41"
                ]
              },
              {
@@ -597,9 +597,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
                  "52",
-                 "53",
+                 "52",
+                 "54",
                  "57"
                ]
              },
@@ -608,7 +608,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
+                 "56",
                  "56",
                  "64",
                  "69"
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 09:05:31 2018</p>
+         Last Run: Mon Jul 16 10:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
