--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 10:05:17 2018</p>
+         Last Run: Mon Jul 16 11:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 10:05:17 2018</p>
+         Last Run: Mon Jul 16 11:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -231,38 +231,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>28</td>
-                        <td>28</td>
-                        <td>0</td>
-                        <td>32</td>
+                        <td>29</td>
+                        <td>29</td>
+                        <td>2</td>
+                        <td>31</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>ESE</td>
-                        <td>53</td>
+                        <td>11</td>
+                        <td>E</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>27</td>
-                        <td>27</td>
-                        <td>0</td>
+                        <td>Partly Cloudy</td>
+                        <td>28</td>
+                        <td>28</td>
+                        <td>4</td>
                         <td>35</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>60</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>0</td>
-                        <td>41</td>
+                        <td>4</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>58</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,8 +306,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "29",
                  "28",
-                 "27",
                  "26"
                ]
              },
@@ -317,8 +317,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "29",
                  "28",
-                 "27",
                  "26"
                ]
              }
@@ -370,9 +370,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
-                 "0",
-                 "0"
+                 "2",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -380,9 +380,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "32",
+                 "31",
                  "35",
-                 "41"
+                 "42"
                ]
              },
              {
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
-                 "60",
-                 "58"
+                 "55",
+                 "49",
+                 "57"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 10:05:17 2018</p>
+         Last Run: Mon Jul 16 11:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -433,32 +433,32 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>7</td>
-                        <td>52</td>
+                        <td>13</td>
+                        <td>51</td>
                         <td>3</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SE</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>3</td>
-                        <td>52</td>
+                        <td>16</td>
+                        <td>51</td>
                         <td>2</td>
                         <td>10</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>56</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>47</td>
-                        <td>54</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>51</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -469,12 +469,12 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>41</td>
-                        <td>57</td>
+                        <td>38</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "22",
                  "22",
-                 "21",
+                 "22",
                  "21"
                ]
              },
@@ -533,7 +533,7 @@
                "data":[
                  "22",
                  "22",
-                 "21",
+                 "22",
                  "21"
                ]
              }
@@ -586,10 +586,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "3",
-                 "47",
-                 "41"
+                 "13",
+                 "16",
+                 "51",
+                 "38"
                ]
              },
              {
@@ -597,10 +597,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
-                 "52",
-                 "54",
-                 "57"
+                 "51",
+                 "51",
+                 "53",
+                 "56"
                ]
              },
              {
@@ -608,10 +608,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
+                 "55",
                  "56",
                  "64",
-                 "69"
+                 "68"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 10:05:17 2018</p>
+         Last Run: Mon Jul 16 11:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
