--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 11:05:26 2018</p>
+         Last Run: Mon Jul 16 12:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -37,8 +37,8 @@
                         <td>22</td>
                         <td>2</td>
                         <td>14</td>
-                        <td>ESE</td>
-                        <td>0</td>
+                        <td>SE</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -48,7 +48,7 @@
                         <td>0</td>
                         <td>25</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
                         <td>0</td>
                      </tr>
@@ -58,7 +58,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -182,7 +182,7 @@
                "data":[
                  "22",
                  "25",
-                 "30"
+                 "29"
                ]
              },
              {
@@ -190,7 +190,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "0",
+                 "1",
                  "0",
                  "0"
                ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 11:05:26 2018</p>
+         Last Run: Mon Jul 16 12:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -233,12 +233,12 @@
                         <td>Partly Cloudy</td>
                         <td>29</td>
                         <td>29</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>31</td>
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>55</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -370,7 +370,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "1",
                  "4",
                  "4"
                ]
@@ -390,7 +390,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
+                 "56",
                  "49",
                  "57"
                ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 11:05:26 2018</p>
+         Last Run: Mon Jul 16 12:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -433,32 +433,32 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>13</td>
-                        <td>51</td>
+                        <td>24</td>
+                        <td>50</td>
                         <td>3</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>55</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>16</td>
-                        <td>51</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>40</td>
+                        <td>50</td>
                         <td>2</td>
-                        <td>10</td>
-                        <td>ESE</td>
-                        <td>56</td>
+                        <td>11</td>
+                        <td>SE</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>51</td>
-                        <td>53</td>
+                        <td>54</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -469,12 +469,12 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>38</td>
+                        <td>57</td>
                         <td>56</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "22",
-                 "22",
+                 "23",
                  "22",
                  "21"
                ]
@@ -532,7 +532,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "22",
-                 "22",
+                 "23",
                  "22",
                  "21"
                ]
@@ -586,10 +586,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
-                 "16",
-                 "51",
-                 "38"
+                 "24",
+                 "40",
+                 "54",
+                 "57"
                ]
              },
              {
@@ -597,9 +597,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "51",
-                 "53",
+                 "50",
+                 "50",
+                 "52",
                  "56"
                ]
              },
@@ -608,10 +608,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "56",
+                 "52",
+                 "53",
                  "64",
-                 "68"
+                 "69"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 11:05:26 2018</p>
+         Last Run: Mon Jul 16 12:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -649,63 +649,63 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>24</td>
-                        <td>60</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>33</td>
+                        <td>56</td>
                         <td>3</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>46</td>
+                        <td>WNW</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>24</td>
-                        <td>55</td>
-                        <td>4</td>
-                        <td>10</td>
-                        <td>NW</td>
-                        <td>46</td>
-                     </tr>
-                     <tr>
-                        <td>12:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>51</td>
-                        <td>51</td>
-                        <td>6</td>
-                        <td>10</td>
+                        <td>35</td>
+                        <td>49</td>
+                        <td>4</td>
+                        <td>8</td>
+                        <td>NW</td>
+                        <td>50</td>
+                     </tr>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>24</td>
+                        <td>45</td>
+                        <td>5</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>50</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>47</td>
-                        <td>48</td>
-                        <td>7</td>
+                        <td>Mostly Cloudy</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>23</td>
+                        <td>41</td>
+                        <td>5</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>50</td>
+                        <td>WNW</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>44</td>
-                        <td>47</td>
-                        <td>7</td>
+                        <td>Mostly Cloudy</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>39</td>
+                        <td>5</td>
                         <td>10</td>
-                        <td>NNW</td>
-                        <td>50</td>
+                        <td>NW</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -751,11 +751,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "15",
                  "16",
                  "17",
                  "18",
-                 "19"
+                 "19",
+                 "20"
                ]
              },
              {
@@ -764,11 +764,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "15",
                  "16",
                  "17",
                  "18",
-                 "19"
+                 "19",
+                 "20"
                ]
              }
            ]
@@ -821,11 +821,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "33",
+                 "35",
                  "24",
-                 "24",
-                 "51",
-                 "47",
-                 "44"
+                 "23",
+                 "20"
                ]
              },
              {
@@ -833,11 +833,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
-                 "55",
-                 "51",
-                 "48",
-                 "47"
+                 "56",
+                 "49",
+                 "45",
+                 "41",
+                 "39"
                ]
              },
              {
@@ -845,11 +845,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "46",
+                 "47",
                  "50",
                  "50",
-                 "50"
+                 "66",
+                 "66"
                ]
              }
            ]
